<resources>
    <string name="app_name">ShoeStoreApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="desc_image_logo_app">image logo app</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_the_shoe_store_n_i_wish_you_a_wonderful_shopping">Welcome to the shoe store.\n I wish you a wonderful shopping</string>
    <string name="go_to_instructions">Go to Instructions</string>
    <string name="instructions">Instructions</string>
    <string name="press_the_button_below_to_go_to_the_nwxt_secreen_you_ll_be_able_to_browse_the_shoe_list">Press the button below to go to the next screen , you\'ll be able to browse the shoe list</string>
    <string name="go_to_shoe_list">Go to shoe List</string>
    <string name="shoe_list">Shoe List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
    <string name="company">Company</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="please_fill_all_fields">Please Fill all Fields</string>
    <string name="please_enter_email_and_password">Please enter email and password</string>
    <string name="there_are_no_shoes_to_display_please_add_shoes">There are no shoes to display. Please add shoes</string>
    <string name="size">size: %s</string>
</resources>