<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.shoestoreapp.shoeList.ShoeListViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".shoeDetails.ShoeDetailsFragment">

        <!--I use ConstraintLayout because it is more versatile
 and easy to specify the view positions based on screen sizes.-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/wave"
                app:layout_constraintDimensionRatio="1:0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/img_shoes"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintDimensionRatio="1:0.6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2">

                <TextView
                    style="@style/labelInputStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/inputShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_shoe_name"
                    android:text="@={viewModel.shoeName}" />

                <TextView
                    style="@style/labelInputStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/inputShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/enter_shoe_size"
                    android:inputType="number"
                    android:text="@={viewModel.shoeSize}" />

                <TextView
                    style="@style/labelInputStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/company" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/inputShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_company_name"
                    android:text="@={viewModel.company}" />

                <TextView
                    style="@style/labelInputStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/inputShoeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_description"
                    android:text="@={viewModel.description}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/save" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCancel"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/cancel"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>