<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav_host"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.shoestoreapp.login.LoginFragment"
        tools:layout="@layout/fragment_login"
        android:label="@string/login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_pop_in"
            app:popExitAnim="@anim/slide_pop_out"
            />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.shoestoreapp.welcome.WelcomeFragment"
        tools:layout="@layout/fragment_welcome"
        android:label="@string/welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_pop_in"
            app:popExitAnim="@anim/slide_pop_out"
            />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.example.shoestoreapp.instructions.InstructionsFragment"
        tools:layout="@layout/fragment_instructions"
        android:label="@string/instructions" >
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_pop_in"
            app:popExitAnim="@anim/slide_pop_out"
            />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.example.shoestoreapp.shoeList.ShoeListFragment"
        tools:layout="@layout/fragment_shoe_list"
        android:label="@string/shoe_list" />
</navigation>