<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!--I use ConstraintLayout because it is more versatile
    and easy to specify the view positions based on screen sizes.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".welcome.WelcomeFragment">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bottom_corner_shape"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="casual"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/welcome_to_the_shoe_store_n_i_wish_you_a_wonderful_shopping"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/lighter_gray"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-60dp"
            android:backgroundTint="@color/windowBackground"
            app:cardCornerRadius="75dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="24dp"
                android:src="@drawable/logo_shoe_app" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoToInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_instructions"
            app:icon="@drawable/ic_go_arrow"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>